# Logo-Maker

./: Application.cpp  Application.h  Button.cpp  Button.h  CMakeLists.txt  ColorGradient.cpp  ColorGradient.h  ColorPicker.cpp  ColorPicker.h  Constants.h  DropdownMenu.cpp  DropdownMenu.h  EventHandler.h  FileItem.cpp  FileItem.h  FileNode.cpp  FileNode.h  FileTree.cpp  FileTree.h  FontSelector.cpp  FontSelector.h  GUI_Component.h  History.cpp  History.h  HueSelector.cpp  HueSelector.h  Image.cpp  Image.h  ImageProperties.h  InputBox.cpp  InputBox.h  Item.cpp  Item.h  ItemList.cpp  ItemList.h  KeyShortcuts.cpp  KeyShortcuts.h  KeywordCompare.cpp  KeywordCompare.h  Label.h  (+27 more)
